# duckdb_urlpattern

./: .readthedocs.yaml  CMakeLists.txt  LICENSE  Makefile  README.md  extension_config.cmake  mkdocs.yml  vcpkg.json
.github/workflows/: MainDistributionPipeline.yml  ci.yml  release.yml
docs/: api-reference.md  examples.md  index.md  installation.md  pattern-syntax.md
src/: urlpattern_extension.cpp
src/include/: duckdb_re2_regex_provider.hpp  urlpattern_extension.hpp
test/sql/: urlpattern.test
workspace/design/: urlpattern_extension_design.md
